<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/orderReceived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_received"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>
    <TextView
        android:id="@+id/confirmationCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_id"
        app:layout_constraintTop_toBottomOf="@id/orderReceived"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>
    <TextView
        android:id="@+id/confirmationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmation_code"
        app:layout_constraintStart_toEndOf="@id/confirmationCodeLabel"
        app:layout_constraintBaseline_toBaselineOf="@id/confirmationCodeLabel"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"/>
    <TextView
        android:id="@+id/creditConfirmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_card"
        app:layout_constraintTop_toBottomOf="@id/confirmationCodeLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>
    <TextView
        android:id="@+id/creditConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_card_number"
        app:layout_constraintStart_toStartOf="@id/confirmationCode"
        app:layout_constraintBaseline_toBaselineOf="@id/creditConfirmLabel"/>
    <TextView
        android:id="@+id/cscConfirmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/csc"
        app:layout_constraintTop_toBottomOf="@id/creditConfirmLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>
    <TextView
        android:id="@+id/cscConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_csc"
        app:layout_constraintStart_toStartOf="@id/confirmationCode"
        app:layout_constraintBaseline_toBaselineOf="@id/cscConfirmLabel"/>
    <TextView
        android:id="@+id/expiryConfirmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expires"
        app:layout_constraintTop_toBottomOf="@id/cscConfirmLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>
    <TextView
        android:id="@+id/expiryConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mm_yy"
        app:layout_constraintStart_toStartOf="@id/confirmationCode"
        app:layout_constraintBaseline_toBaselineOf="@id/expiryConfirmLabel"/>
    <TextView
        android:id="@+id/test1"
        android:text="@string/test_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/expiryConfirmLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollHorizontally="false"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"/>
    <TextView
        android:id="@+id/test2"
        android:text="@string/test_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/test1"
        app:layout_constraintStart_toStartOf="@id/test1"
        app:layout_constraintLeft_toLeftOf="@id/test1"
        android:scrollHorizontally="false"
        android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>